// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/inputs/ZigCheckBox renders correctly with default props 1`] = `
<label
  class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-jzcd7z-MuiFormControlLabel-root"
  id="test"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-arbg3y-MuiButtonBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-1m9pwf3"
      data-indeterminate="false"
      id="test-input"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="CheckBoxOutlineBlankIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
      />
    </svg>
  </span>
</label>
`;

exports[`components/inputs/ZigCheckBox renders correctly with default props 2`] = `
CSSStyleDeclaration {
  "0": "cursor",
  "1": "display",
  "2": "align-items",
  "3": "vertical-align",
  "4": "margin-left",
  "5": "margin-right",
  "6": "visibility",
  "_importants": {
    "align-items": "",
    "cursor": "",
    "display": "",
    "margin-left": "",
    "margin-right": "",
    "vertical-align": "",
    "visibility": undefined,
  },
  "_length": 7,
  "_onChange": [Function],
  "_values": {
    "align-items": "center",
    "cursor": "pointer",
    "display": "inline-flex",
    "margin-left": "-11px",
    "margin-right": "16px",
    "vertical-align": "middle",
    "visibility": "visible",
  },
}
`;

exports[`components/inputs/ZigCheckBox renders correctly with outlined variant and label 1`] = `
<label
  class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-jzcd7z-MuiFormControlLabel-root"
  id="test"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-arbg3y-MuiButtonBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-1m9pwf3"
      data-indeterminate="false"
      id="test-input"
      type="checkbox"
    />
    <div
      class="MuiBox-root css-13jg4bh"
    />
  </span>
  <span
    class="MuiTypography-root MuiTypography-body2 css-15j243s-MuiTypography-root"
    id="test-label"
  >
    Test Label
  </span>
</label>
`;

exports[`components/inputs/ZigCheckBox renders correctly with outlined variant and label 2`] = `
<span
  class="MuiTypography-root MuiTypography-body2 css-15j243s-MuiTypography-root"
  id="test-label"
>
  Test Label
</span>
`;
